--- a/package.json
+++ b/package.json
@@ -35,5 +35,5 @@
     "concurrently": "^4.1.2",
     "json-server": "^0.15.1"
   },
-  "proxy": "http://loaclhost:5000"
+  "proxy": "http://localhost:5000/"
 }
